--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -31,7 +31,7 @@
 					<p><abbr>Mr.</abbr> Horner and Sir David Brewster have described (Philosophical Transactions, 1836, page 65) a singular “artificial substance resembling shell.” It is deposited in fine, transparent, highly polished, brown-coloured laminae, possessing peculiar optical properties, on the inside of a vessel, in which cloth, first prepared with glue and then with lime, is made to revolve rapidly in water. It is much softer, more transparent, and contains more animal matter, than the natural incrustation at Ascension; but we here again see the strong tendency which carbonate of lime and animal matter evince to form a solid substance allied to shell. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-8" epub:type="endnote">
-					<p>Pers. Narr., volume <span epub:type="z3998:roman">V</span>, pt. 1., page 18. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-8" epub:type="backlink">↩</a></p>
+					<p>Pers. Narr., volume <span epub:type="z3998:roman">V</span>, part 1, page 18. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-8" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-9" epub:type="endnote">
 					<p>M. Montagne, in Comptes Rendus, <abbr>etc.</abbr>, Juillet, 1844; and Annal. des Scienc. Nat., <abbr>Dec.</abbr> 1844 <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-9" epub:type="backlink">↩</a></p>
