--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,87 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">The Voyage of the Beagle</a>
+					<ol>
+						<li>
+							<a href="text/frontispiece.xhtml">Frontispiece</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <abbr>St.</abbr> Jago—Cape de Verd Islands</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Rio de Janeiro</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Maldonado</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Rio Negro to Bahia Blanca</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Bahia Blanca</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Bahia Blanca to Buenos Aires</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Buenos Aires and <abbr>St.</abbr> Fe</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Banda Oriental and Patagonia</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Santa Cruz, Patagonia, and the Falkland Islands</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Tierra del Fuego</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Strait of Magellan.—Climate of the Southern Coasts</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Central Chile</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Chiloe and Chonos Islands</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Chiloe and Concepcion: Great Earthquake</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Passage of the Cordillera</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Northern Chile and Peru</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Galapagos Archipelago</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Tahiti and New Zealand</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Australia</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Keeling Island: Coral Formations</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: Mauritius to England</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +108,13 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">The Voyage of the Beagle</a>
 				</li>
 				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 			</ol>
 		</nav>
