Some formatting tweaks to the Dedication

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,9 +7,10 @@
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
-			<p>To<br/>
-			Charles Lyell, Esq, F.R.S.<br/>
-			This second edition is dedicated with grateful pleasure, as an acknowledgment that the chief part of whatever scientific merit this journal and the other works of the author may possess, has been derived from studying the well-known and admirable <i epub:type="se:name.publication.book">Principles of Geology</i>.</p>
+			<p>To</p>
+			<p>Charles Lyell, <abbr>Esq.</abbr>, <abbr epub:type="z3998:initialism">F.R.S.</abbr></p>
+			<p>This second edition is dedicated with grateful pleasure, as an acknowledgment that the chief part of whatever scientific merit this journal and the other works of the author may possess, has been derived from studying the well-known and admirable</p>
+			<p><i epub:type="se:name.publication.book">Principles of Geology</i>.</p>
 		</section>
 	</body>
 </html>
