Tagged one missed journal title

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -550,7 +550,7 @@
 					<p><i epub:type="se:name.publication.journal">Monats. der König. Akad. d. Wiss. zu Berlin</i>. Vom April, 1845. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-181" epub:type="endnote">
-					<p>I have described this Bar in detail, in the Lond. and Edin. Phil. Mag., volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
+					<p>I have described this Bar in detail, in the <i epub:type="se:name.publication.journal">Lond. and Edin. Phil. Mag</i>., volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
