[Editorial] Removed spurious capitalisation in endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>I must take this opportunity of returning my sincere thanks to <abbr>Mr.</abbr> Bynoe, the surgeon of the <i epub:type="se:name.vessel.ship">Beagle</i>, for his very kind attention to me when I was ill at Valparaiso. <cite>—Charles Darwin</cite> <a href="preface.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>I state this on the authority of <abbr>Dr.</abbr> <abbr epub:type="z3998:given-name">E.</abbr> Dieffenbach, in his German translation of the first edition of this Journal. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>I state this on the authority of <abbr>Dr.</abbr> <abbr epub:type="z3998:given-name">E.</abbr> Dieffenbach, in his German translation of the first edition of this journal. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p>The Cape de Verd Islands were discovered in 1449. There was a tombstone of a bishop with the date of 1571; and a crest of a hand and dagger, dated 1497. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-3" epub:type="backlink">↩</a></p>
@@ -253,7 +253,7 @@
 					<p>These droughts to a certain degree seem to be almost periodical; I was told the dates of several others, and the intervals were about fifteen years. <cite>—Charles Darwin</cite> <a href="chapter-7.xhtml#noteref-81" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-82" epub:type="endnote">
-					<p><abbr>Mr.</abbr> Waterhouse has drawn up a detailed description of this head, which I hope he will publish in some Journal. <cite>—Charles Darwin</cite> <a href="chapter-8.xhtml#noteref-82" epub:type="backlink">↩</a></p>
+					<p><abbr>Mr.</abbr> Waterhouse has drawn up a detailed description of this head, which I hope he will publish in some journal. <cite>—Charles Darwin</cite> <a href="chapter-8.xhtml#noteref-82" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-83" epub:type="endnote">
 					<p>A nearly similar abnormal, but I do not know whether hereditary, structure has been observed in the carp, and likewise in the crocodile of the Ganges: Histoire des Anomalies, par <abbr>M.</abbr> <abbr epub:type="z3998:given-name">Isid.</abbr> Geoffroy <abbr>St.</abbr> Hilaire, <abbr>tom.</abbr> <span epub:type="z3998:roman">I</span> page 244. <cite>—Charles Darwin</cite> <a href="chapter-8.xhtml#noteref-83" epub:type="backlink">↩</a></p>
@@ -361,7 +361,7 @@
 					<p>Agueros, <i epub:type="se:name.publication.book">Descrip. Hist. de la Prov. de Chiloe</i>, 1791, page 94. <cite>—Charles Darwin</cite> <a href="chapter-11.xhtml#noteref-117" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-118" epub:type="endnote">
-					<p>See the German Translation of this Journal; and for the other facts, <abbr>Mr.</abbr> Brown’s Appendix to Flinders’s <i epub:type="se:name.publication.book">Voyage</i>. <cite>—Charles Darwin</cite> <a href="chapter-11.xhtml#noteref-118" epub:type="backlink">↩</a></p>
+					<p>See the German Translation of this journal; and for the other facts, <abbr>Mr.</abbr> Brown’s Appendix to Flinders’s <i epub:type="se:name.publication.book">Voyage</i>. <cite>—Charles Darwin</cite> <a href="chapter-11.xhtml#noteref-118" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-119" epub:type="endnote">
 					<p>On the Cordillera of central Chile, I believe the snow-line varies exceedingly in height in different summers. I was assured that during one very dry and long summer, all the snow disappeared from Aconcagua, although it attains the prodigious height of 23,000 feet. It is probable that much of the snow at these great heights is evaporated rather than thawed. <cite>—Charles Darwin</cite> <a href="chapter-11.xhtml#noteref-119" epub:type="backlink">↩</a></p>
@@ -496,7 +496,7 @@
 					<p><i epub:type="se:name.publication.book">Physical Description of New South Wales and Van Diemen’s Land</i>, page 354. <cite>—Charles Darwin</cite> <a href="chapter-19.xhtml#noteref-162" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-163" epub:type="endnote">
-					<p>These Plants are described in the <i epub:type="se:name.publication.journal">Annals of Nat. Hist</i>., volume <span epub:type="z3998:roman">I</span>, 1838, page 337. <cite>—Charles Darwin</cite> <a href="chapter-20.xhtml#noteref-163" epub:type="backlink">↩</a></p>
+					<p>These plants are described in the <i epub:type="se:name.publication.journal">Annals of Nat. Hist</i>., volume <span epub:type="z3998:roman">I</span>, 1838, page 337. <cite>—Charles Darwin</cite> <a href="chapter-20.xhtml#noteref-163" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-164" epub:type="endnote">
 					<p>Holman’s <i epub:type="se:name.publication.book">Travels</i>, volume <span epub:type="z3998:roman">IV</span> page 378. <cite>—Charles Darwin</cite> <a href="chapter-20.xhtml#noteref-164" epub:type="backlink">↩</a></p>
@@ -550,7 +550,7 @@
 					<p><i epub:type="se:name.publication.journal">Monats. der König. Akad. d. Wiss. zu Berlin</i>. Vom April, 1845. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-181" epub:type="endnote">
-					<p>I have described this Bar in detail, in the <i epub:type="se:name.publication.journal">Lond. and Edin. Phil. Mag</i>., volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
+					<p>I have described this bar in detail, in the <i epub:type="se:name.publication.journal">Lond. and Edin. Phil. Mag</i>., volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
