--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -25,7 +25,7 @@
 					<p>So named according to Patrick Symes’s nomenclature. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p>See <i epub:type="se:name.publication.book">Encyclopedia of Anatomy and Physiology</i>, article Cephalopoda <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>See <i epub:type="se:name.publication.book">Encyclopedia of Anatomy and Physiology</i>, article “Cephalopoda”. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
 					<p><abbr>Mr.</abbr> Horner and Sir David Brewster have described (<i epub:type="se:name.publication.journal">Philosophical Transactions</i>, 1836, page 65) a singular “artificial substance resembling shell.” It is deposited in fine, transparent, highly polished, brown-coloured laminae, possessing peculiar optical properties, on the inside of a vessel, in which cloth, first prepared with glue and then with lime, is made to revolve rapidly in water. It is much softer, more transparent, and contains more animal matter, than the natural incrustation at Ascension; but we here again see the strong tendency which carbonate of lime and animal matter evince to form a solid substance allied to shell. <cite>—Charles Darwin</cite> <a href="chapter-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
