Added and cleaned up some language tags

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -310,7 +310,7 @@
 					<p>I have reason, however, to suspect that there is a field-mouse. The common European rat and mouse have roamed far from the habitations of the settlers. The common hog has also run wild on one islet; all are of a black colour: the boars are very fierce, and have great trunks. <cite>—Charles Darwin</cite> <a href="chapter-9.xhtml#noteref-100" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-101" epub:type="endnote">
-					<p>The “culpeu” is the <i epub:type="z3998:taxonomy">Canis Magellanicus</i> brought home by Captain King from the Strait of Magellan. It is common in Chile. <cite>—Charles Darwin</cite> <a href="chapter-9.xhtml#noteref-101" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="es">culpeu</i> is the <i epub:type="z3998:taxonomy">Canis Magellanicus</i> brought home by Captain King from the Strait of Magellan. It is common in Chile. <cite>—Charles Darwin</cite> <a href="chapter-9.xhtml#noteref-101" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-102" epub:type="endnote">
 					<p>Pernety, <i epub:type="se:name.publication.book" xml:lang="fr">Voyage aux Isles Malouines</i>, page 526. <cite>—Charles Darwin</cite> <a href="chapter-9.xhtml#noteref-102" epub:type="backlink">↩</a></p>
