[Editorial] Expanded abbreviation of journal title in endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -550,7 +550,7 @@
 					<p><i epub:type="se:name.publication.journal" xml:lang="de">Monats. der König. Akademie der Wissen zu Berlin</i>. Vom April, 1845. <cite>—⁠Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-181" epub:type="endnote">
-					<p>I have described this bar in detail, in the <i epub:type="se:name.publication.journal">Lond. and Edinburgh Philosophical Mag</i>., volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—⁠Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
+					<p>I have described this bar in detail, in the <i epub:type="se:name.publication.journal">London and Edinburgh Philosophical Magazine</i>, volume <span epub:type="z3998:roman">XIX</span> (1841), page 257. <cite>—⁠Charles Darwin</cite> <a href="chapter-21.xhtml#noteref-181" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
