--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
 			<p>To<br/>
-			Charles Lyell, <abbr>Esq.</abbr>, <abbr epub:type="z3998:initialism">F.R.S.</abbr><br/>
+			Charles Lyell, <abbr epub:type="z3998:name-title">Esq.</abbr>, <abbr epub:type="z3998:initialism">F.R.S.</abbr><br/>
 			This second edition is dedicated with grateful pleasure, as an acknowledgment that the chief part of whatever scientific merit this journal and the other works of the author may possess, has been derived from studying the well-known and admirable<br/>
 			<i epub:type="se:name.publication.book">Principles of Geology</i>.</p>
 		</section>
