Update core.css to new standards

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -76,7 +76,7 @@
 					<p>Maclaren, <abbr>art.</abbr> “America,” <i epub:type="se:name.publication.book">Encyclopedia Brittannica</i> <a href="chapter-3.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<p>Azara says, “<i xml:lang="fr">Je crois que la quantite annuelle des pluies est, dans toutes ces contrees, plus considerable qu’en Espagne.</i>”⁠—Volume <span epub:type="z3998:roman">I</span> page 36. <a href="chapter-3.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+					<p>Azara says, “<i xml:lang="fr">Je crois que la quantite annuelle des pluies est, dans toutes ces contrees, plus considerable qu’en Espagne.</i>” <cite>—Volume <span epub:type="z3998:roman">I</span> page 36</cite> <a href="chapter-3.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
 					<p>In South America I collected altogether twenty-seven species of mice, and thirteen more are known from the works of Azara and other authors. Those collected by myself have been named and described by <abbr epub:type="z3998:name-title">Mr.</abbr> Waterhouse at the meetings of the Zoological Society. I must be allowed to take this opportunity of returning my cordial thanks to <abbr epub:type="z3998:name-title">Mr.</abbr> Waterhouse, and to the other gentlemen attached to that Society, for their kind and most liberal assistance on all occasions. <a href="chapter-3.xhtml#noteref-24" epub:type="backlink">↩</a></p>
@@ -316,7 +316,7 @@
 					<p>Pernety, <i epub:type="se:name.publication.book" xml:lang="fr">Voyage aux Isles Malouines</i>, page 526. <a href="chapter-9.xhtml#noteref-102" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-103" epub:type="endnote">
-					<p>“<i xml:lang="fr">Nous n’avons pas ete moins saisis d’etonnement à la vue de l’innombrable quantite de pierres de touts grandeurs, bouleversees les unes sur les autres, et cependent rangees, comme si elles avoient ete amoncelees negligemment pour remplir des ravins. On ne se lassoit pas d’admirer les effets prodigieux de la nature.</i>”⁠—Pernety, page 526. <a href="chapter-9.xhtml#noteref-103" epub:type="backlink">↩</a></p>
+					<p>“<i xml:lang="fr">Nous n’avons pas ete moins saisis d’etonnement à la vue de l’innombrable quantite de pierres de touts grandeurs, bouleversees les unes sur les autres, et cependent rangees, comme si elles avoient ete amoncelees negligemment pour remplir des ravins. On ne se lassoit pas d’admirer les effets prodigieux de la nature.</i>” <cite>—Pernety, page 526</cite> <a href="chapter-9.xhtml#noteref-103" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-104" epub:type="endnote">
 					<p>An inhabitant of Mendoza, and hence well capable of judging, assured me that, during the several years he had resided on these islands, he had never felt the slightest shock of an earthquake. <a href="chapter-9.xhtml#noteref-104" epub:type="backlink">↩</a></p>
