Remove unnecessary LoI section element
Per https://standardebooks.org/manual/1.8.0/7-high-level-structural-patterns#7.9
the <nav> should be directly nested under the <body>.

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -6,87 +6,85 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter">
-		<section id="loi" epub:type="loi">
-			<nav epub:type="loi">
-				<h2 epub:type="title">List of Illustrations</h2>
-				<ol>
-					<li>
-						<p>
-							<a href="frontispiece.xhtml#illustration-1">Amblyrynchus Demarlii: a species of lizard found on some of the islands of the Galapagos Archipelago.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-2">A mineral with inclusions resembling small plants.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-3">Two tiny sea-creatures with bodies like tubes with conical ends, joined together.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-7.xhtml#illustration-4">A drawing of the head and bill of the Scissor-beak bird, from the side, showing the much longer lower mandible, and from above showing its laterally flattened beak.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-11.xhtml#illustration-5">A globular fungus with its entire surface deeply pitted or honeycombed.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-11.xhtml#illustration-6">Sketch map of the glacier which reaches the Gulf of Penas, showing the length and width of the glacier, and a morass to the west of it.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-17.xhtml#illustration-7">Sketch map of the islands of the Galapagos Archipelago, consisting of ten principal islands, of which five are much larger than the others.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-17.xhtml#illustration-8">1. Geospiza magnirostris. 2. Geospiza fortis. 3. Geospiza parvula. 4. Certhidea olivasea.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-17.xhtml#illustration-9">Amblyrhynchus cristatus. a: Tooth of, natural size, and likewise magnified.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-20.xhtml#illustration-10">A drawing of a coral atoll in the Pacific Ocean showing its circular formation.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-20.xhtml#illustration-11">Drawing of the interior of a coral atoll, with an island and distinct peak in the center.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-20.xhtml#illustration-12">1. Vanikoro. 2. Gambier Islands. 3. Maurua. The horizontal shading shows the barrier-reefs and lagoon-channels. The inclined shading above the level of the sea (A) shows the actual form of the land; the inclined shading below this line, shows its probable prolongation under water.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-20.xhtml#illustration-13">AA. Outer edges of the fringing-reef, at the level of the sea. BB. The shores of the fringed island. A′A′. Outer edges of the reef, after its upward growth during a period of subsidence, now converted into a barrier, with islets on it. B′B′. The shores of the now encircled island. CC. Lagoon-channel. <abbr epub:type="z3998:initialism">N.B.</abbr> In this and the following woodcut, the subsidence of the land could be represented only by an apparent rise in the level of the sea.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-20.xhtml#illustration-14">A′A′. Outer edges of the barrier-reef at the level of the sea, with islets on it. B′B′. The shores of the included island. CC. The lagoon-channel. A″A″. Outer edges of the reef, now converted into an atoll. C′. The lagoon of the new atoll. <abbr epub:type="z3998:initialism">N.B.</abbr>⁠—According to the true scale, the depths of the lagoon-channel and lagoon are much exaggerated.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-21.xhtml#illustration-15">The interior structure of a volcanic bomb, showing the coarsely cellular central part, the cells decreasing in size towards the top of the drawing, followed by a shell-like case and outer crust.</a>
-						</p>
-					</li>
-				</ol>
-			</nav>
-		</section>
+		<nav id="loi" epub:type="loi">
+			<h2 epub:type="title">List of Illustrations</h2>
+			<ol>
+				<li>
+					<p>
+						<a href="frontispiece.xhtml#illustration-1">Amblyrynchus Demarlii: a species of lizard found on some of the islands of the Galapagos Archipelago.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-2">A mineral with inclusions resembling small plants.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-3">Two tiny sea-creatures with bodies like tubes with conical ends, joined together.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-7.xhtml#illustration-4">A drawing of the head and bill of the Scissor-beak bird, from the side, showing the much longer lower mandible, and from above showing its laterally flattened beak.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-11.xhtml#illustration-5">A globular fungus with its entire surface deeply pitted or honeycombed.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-11.xhtml#illustration-6">Sketch map of the glacier which reaches the Gulf of Penas, showing the length and width of the glacier, and a morass to the west of it.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-17.xhtml#illustration-7">Sketch map of the islands of the Galapagos Archipelago, consisting of ten principal islands, of which five are much larger than the others.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-17.xhtml#illustration-8">1. Geospiza magnirostris. 2. Geospiza fortis. 3. Geospiza parvula. 4. Certhidea olivasea.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-17.xhtml#illustration-9">Amblyrhynchus cristatus. a: Tooth of, natural size, and likewise magnified.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-20.xhtml#illustration-10">A drawing of a coral atoll in the Pacific Ocean showing its circular formation.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-20.xhtml#illustration-11">Drawing of the interior of a coral atoll, with an island and distinct peak in the center.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-20.xhtml#illustration-12">1. Vanikoro. 2. Gambier Islands. 3. Maurua. The horizontal shading shows the barrier-reefs and lagoon-channels. The inclined shading above the level of the sea (A) shows the actual form of the land; the inclined shading below this line, shows its probable prolongation under water.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-20.xhtml#illustration-13">AA. Outer edges of the fringing-reef, at the level of the sea. BB. The shores of the fringed island. A′A′. Outer edges of the reef, after its upward growth during a period of subsidence, now converted into a barrier, with islets on it. B′B′. The shores of the now encircled island. CC. Lagoon-channel. <abbr epub:type="z3998:initialism">N.B.</abbr> In this and the following woodcut, the subsidence of the land could be represented only by an apparent rise in the level of the sea.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-20.xhtml#illustration-14">A′A′. Outer edges of the barrier-reef at the level of the sea, with islets on it. B′B′. The shores of the included island. CC. The lagoon-channel. A″A″. Outer edges of the reef, now converted into an atoll. C′. The lagoon of the new atoll. <abbr epub:type="z3998:initialism">N.B.</abbr>⁠—According to the true scale, the depths of the lagoon-channel and lagoon are much exaggerated.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-21.xhtml#illustration-15">The interior structure of a volcanic bomb, showing the coarsely cellular central part, the cells decreasing in size towards the top of the drawing, followed by a shell-like case and outer crust.</a>
+					</p>
+				</li>
+			</ol>
+		</nav>
 	</body>
 </html>
