--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1997 by<br/>
-			<b epub:type="z3998:personal-name">John Hamm</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">John Hamm</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/944">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
