--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -430,7 +430,7 @@
 					<p>Scoresby’s <i epub:type="se:name.publication.book">Arctic Regions</i>, volume <span epub:type="z3998:roman">I</span> page 122. <a href="chapter-15.xhtml#noteref-140" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-141" epub:type="endnote">
-					<p>I have heard it remarked in Shropshire that the water, when the Severn is flooded from long-continued rain, is much more turbid than when it proceeds from the snow melting in the Welsh mountains. D’Orbigny (tome <span epub:type="z3998:roman">I</span> page 184), in explaining the cause of the various colours of the rivers in South America, remarks that those with blue or clear water have there source in the Cordillera, where the snow melts. <a href="chapter-15.xhtml#noteref-141" epub:type="backlink">↩</a></p>
+					<p>I have heard it remarked in Shropshire that the water, when the Severn is flooded from long-continued rain, is much more turbid than when it proceeds from the snow melting in the Welsh mountains. D’Orbigny (tome <span epub:type="z3998:roman">I</span> page 184), in explaining the cause of the various colours of the rivers in South America, remarks that those with blue or clear water have their source in the Cordillera, where the snow melts. <a href="chapter-15.xhtml#noteref-141" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-142" epub:type="endnote">
 					<p><abbr epub:type="z3998:name-title">Dr.</abbr> Gillies in <i epub:type="se:name.publication.journal">Journal of Natural and Geographical Science</i>, <abbr>Aug.</abbr>, 1830. This author gives the heights of the Passes. <a href="chapter-15.xhtml#noteref-142" epub:type="backlink">↩</a></p>
